--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,7 @@
             android:id="@+id/main_surface"
             android:layout_centerInParent="true"
             android:scaleType="centerCrop"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
