--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:background="@android:color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:id="@+id/main_root"
     tools:context="com.tianzl.photofilter.MainActivity">
    <LinearLayout
        android:id="@+id/main_ll"
