--- a/app/src/main/res/layout/item_dialog_folder.xml
+++ b/app/src/main/res/layout/item_dialog_folder.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="45dp">
     <ImageView
         android:id="@+id/item_dialog_folder_icon"
         android:src="@mipmap/folders"
         android:layout_width="60dp"
+        android:padding="10dp"
         android:scaleType="centerCrop"
         android:layout_height="match_parent" />
     <TextView
