--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="40dp">
     <ImageButton
         android:id="@+id/bar_title_left"
-        android:src="@mipmap/back_1"
+        android:src="@mipmap/back"
         android:background="@android:color/transparent"
         style="@style/horizontal_mean" />
     <TextView
