--- a/app/src/main/res/layout/dialog_insert_text.xml
+++ b/app/src/main/res/layout/dialog_insert_text.xml
@@ -95,7 +95,7 @@
             android:textSize="20sp"
             android:gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="40dp" />
     </LinearLayout>
 
 
